# anomaly-transaction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  model-training.yml
app/: __init__.py  streamlit_app.py  utils.py
configs/: alert-config.yaml  config.yaml  model_config.yaml
docker/: Dockerfile  Dockerfile.streamlit  docker-compose.yml
docs/: api_documentation.md  architecture.md  model_card.md  quickstart.md
scripts/: deploy.sh  evaluate_model.py  generate_data.py  train_model.py
src/: __init__.py
src/api/: main.py
src/data/: database.py  generator.py  preprocessor.py
src/inference/: __init__.py  alert_service.py  predictor.py
src/models/: __init__.py  autoencoder.py  ensemble.py  isolation_forest.py
src/training/: __init__.py  evaluator.py  trainer.py
tests/: __init__.py  test_models.py
